--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 		<version>2.5.7</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.betterreads</groupId>
+	<groupId>io.springbootproject</groupId>
 	<artifactId>bettereads</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>bettereads</name>
